# pingabot

./: README.md
docs/: architecture.md  calibration.md  troubleshooting.md
firmware/esp32_lidar/: README.md
firmware/pico/: README.md
firmware/pico/src/: CMakeLists.txt  pingabot_pico.c
hardware/: bom.md
ros2_ws/src/pingabot_mission/: mission_node.py
ros2_ws/src/pingabot_navigation/: lidar_serial_node.py
ros2_ws/src/pingabot_vision/: hand_detector_node.py
